fix for overflow of day tags on calendar day

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -155,6 +155,7 @@ header {
   height: 10vh;
   min-height: 80px;
   padding: 5px;
+  overflow: scroll;
 }
 .day-number {
   position: absolute;
@@ -499,7 +500,6 @@ input[type="checkbox"]:checked + label .custom-checkbox:before {
   }
   .tags-list {
     max-height: 55vh;
-    min-height: 340px;
   }
   .tag {
     margin: 0 0 5px 0;
